--- a/source/_posts/礼佛大忏悔文.md
+++ b/source/_posts/礼佛大忏悔文.md
@@ -59,4 +59,10 @@ categories: 经咒
 **所有礼赞供养福 请佛住世转法轮 随喜忏悔诸善根 回向众生及佛道（一拜）**
 **愿将以此胜功德 回向无上真法界 性相佛法及僧伽 二谛融通三昧印 如是无量功德海 我今皆悉尽回向 所有众生身口意 见惑弹谤我法等 如是一切诸业障 悉皆消灭尽无余 念念智周于法界 广度众生皆不退 乃至虚空世界尽 众生及业烦恼尽 如是四法广无边 愿今回向亦如是（一拜 ）**
 **南无大行普贤菩萨（三称毕起立）。**
-　
+
+## 回向文
+
+**愿以此功德，庄严佛净土。**
+**上报四重恩，下济三途苦。**
+**愿有见闻者，悉发菩提心。**
+**尽此一报身，同生极乐国。**
