--- a/source/_posts/圣源觉真经.md
+++ b/source/_posts/圣源觉真经.md
@@ -10,7 +10,7 @@ categories: 术法
 
 降笔千秋在   皇经万古流
 
-## （正文）
+## （正文上段）
 
 **恭请 圣源觉真经 志心皈命礼 (三称)**
 
@@ -62,7 +62,7 @@ categories: 术法
 
 **诵毕用三拱手礼**
 
-
+## （正文中段）
 
 **中段圣源觉 上天消息文** **天地降帝生 就是玉皇公**
 
@@ -120,7 +120,7 @@ categories: 术法
 
 **诵毕用三拱手礼**
 
-
+## （正文下段）
 
 **下段圣源觉 玉皇天理经 慈善并仁义 勤学记在心**
 
